--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;    
+  /* background-image: linear-gradient(purple,rgb(238, 48, 238)); */
+  background-color: #39a35c;
   min-height: 100vh;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-height: 400px;
+  width: 400px;
+  background-color: white;
+  border-radius: 15px;
+  /* box-shadow: 2px 2px 10px 1px rgb(102, 3, 102); */
+  box-shadow: 2px 2px 10px 1px #333;  
+  overflow: hidden;
+  padding: 10px;
+  position: relative;
+}
+.heading-txt{
+  color:white;
+  /* color:#276272; */
+  font-size: 30px;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;  
+  text-transform: uppercase;
+}
+.question{
+  margin:8px;
+  box-shadow: 0px 0px 10px 1px #78d184;
+  border-radius: 5px;
+  padding:5px;
+  font-size: large;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+  min-width: 100%;
+  min-height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#question-number{
+  margin-right: 5px;
+  font-size: larger;
+}
+.option-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin:6px 4px;    
+  width: 100%;
+  padding: 10px;
+}
+/* .option-container input{
+  visibility: hidden;    
+} */
+.option-btn{
+  box-shadow: 0px 0px 4px 1px #78d184;
+  padding: 5px;
+  border-radius: 3px;
+  border:none;
+  outline: none;
+  transition: 0.3s;
+  margin: 5px;
+  min-height: 30px;
+  background-color: #78d18449;
+}
+
+.checked{
+  background-color: #78d184;
+  color:white;
+  box-shadow: 2px 2px 2px 1px #78d184;
+}
+.option-btn:hover{
+  background-color:#78d184;
+  color:white;
+}
+#next-button{
+  padding:10px;
+  border:none;
+  background-color: #78d184;
+  color:white;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 1px #78d184;
+  font-size: larger;
+  font-weight: bold;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  transition: 0.2s;
+  width:100px;
+  position: absolute;
+  bottom: 15px;
+  cursor: pointer;
+}
+#next-button:active{
+  box-shadow:none;    
+}
+.show-score{
+  position: absolute;
+  background-color: #78d184;
+  padding: 2rem;
+  border: 2px;
+  margin-top: 20%;
+  top:2%;
+  font-size: 40px;
+  text-align: center;  
+ 
+  border-radius: 5px;
+}
+/* Add this to your CSS file */
+.option-btn.correct {
+  background-color: #4caf50; /* Green */
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrong-answers {
+  margin-top: 20px;
+  margin-left: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrong-answers h3 {
+  margin-bottom: 10px;
+}
+
+.wrong-answers ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.wrong-answers li {
+  margin-bottom: 10px;
 }
